appId: com.kafka.user
---
- launchApp
- assertVisible:
    id: homepage_feed_items
- scrollUntilVisible:
    element: Romeo and Juliet
- tapOn: Romeo and Juliet
- tapOn: William Shakespeare
- tapOn:
      id: search_clear
#- tapOn:
#      id: search_widget
#- inputText: "Kafka"
#- pressKey: Enter todo: press search
- assertVisible: A Midsummer Night's Dream
- tapOn: A Midsummer Night's Dream
- assertVisible: William Shakespeare
- back
